# rs-co2-mini-monitor

./: Cargo.toml  Cross.toml  README.md
.cross/: build.sh
.cross/arm-unknown-linux-gnueabihf/: Dockerfile
.cross/x86_64-unknown-linux-gnu/: Dockerfile
.github/workflows/: build.yml  release.yml  test.yml
src/: main.rs
