[package]
name = "co2-mini-monitor"
version = "0.1.3-alpha.0"
authors = ["Alisue <lambdalisue@hashnote.net>"]
edition = "2018"

description = "CUI monitor for CO2Mini Indoor Air Quality Monitor"
repository = "https://github.com/lambdalisue/rs-co2-mini-monitor"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
hidapi = "1.2.5"
json = "0.12.4"
